fixed overflow

--- a/app/assets/stylesheets/staffs.scss
+++ b/app/assets/stylesheets/staffs.scss
@@ -11,15 +11,12 @@ html,
 body {
   margin: 0px;
   max-width: 100%;
-  overflow-x: hidden;
+  // overflow-x: hidden;
   cursor: default;
 }
 
 table {
   border-collapse: collapse;
-  width: 80%;
-
-  // background-color: $white;
   font-size: 20px;
 
   th,
@@ -41,11 +38,9 @@ table {
   width: 100%;
 
   h1 {
-    font-family: Roboto;
-    font-style: normal;
     font-weight: 500;
     margin-left: 100px;
-    font-weight: 500;
+    font-weight: 550;
     font-size: 36px;
   }
 
@@ -65,18 +60,18 @@ table {
         padding: 20px;
     }
   }
+
   .content {
     position: absolute;
     left: 140px;
-    width: 100%;
+    width: calc(100% - 140px);
   }
 
   .table-container {
-    width: 100%;
     height: 100%;
     min-height: 100vh;
-    padding: 26px 42px;
     background-color: $background-blue;
+    padding: 20px 42px;
 
     > div {
       background-color: $white;
